src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AcconType__c</fullName>
        <label>取引先分類</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>受注先（店舗）</fullName>
                </value>
                <value>
                    <fullName>請求先</fullName>
                </value>
                <value>
                    <fullName>受注先（請求先）</fullName>
                </value>
                <value>
                    <fullName>発送先</fullName>
                </value>
                <value>
                    <fullName>仕入先</fullName>
                </value>
                <value>
                    <fullName>倉庫</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountTankaMHuyouFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>請求先の取引先商品マスタの有無に寄らず全ての商品を受注登録可能にする場合チェックONにする。
請求先を他にもつ得意先の場合は請求先のチェックONにする。
通常OFF。（ON例：個人客）</inlineHelpText>
        <label>取引先条件マスタ不要</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biko__c</fullName>
        <inlineHelpText>受注登録時に表示させたい内容（例：午前の便出荷必須）を記入。</inlineHelpText>
        <label>備考</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chokinshamei__c</fullName>
        <label>預金者名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DenpatsuMeijinGyosu__c</fullName>
        <defaultValue>6</defaultValue>
        <description>１伝票番号に対して許される明細の最大行数</description>
        <inlineHelpText>１伝票番号に対して許される明細の最大行数</inlineHelpText>
        <label>伝票行数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FumeiNyukinCounterNamachi__c</fullName>
        <label>￥￥_不明入金カウンタ生値</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FumeiNyukinCounter__c</fullName>
        <inlineHelpText>残額￥１円以上の不明入金の件数。</inlineHelpText>
        <label>￥￥_不明入金カウンタ</label>
        <summaryFilterItems>
            <field>NyukinData__c.KeshikomiJutoZumiFlg__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>NyukinData__c.SeikyuAccount__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FumeiNyukinSaidaiGakuNamachi__c</fullName>
        <label>￥￥_不明入金最大額生値</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FumeiNyukinSaishoGakuNamachi__c</fullName>
        <label>￥￥_不明入金最小額生値</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FumeiNyukinZengakuNamachi__c</fullName>
        <label>￥￥_不明入金残額計生値</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ginkobango__c</fullName>
        <inlineHelpText>数字4桁
先頭ゼロ</inlineHelpText>
        <label>銀行番号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ginkomei__c</fullName>
        <label>銀行名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HambaiKanriKigenShift__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>販売管理期限（出荷時に消費期限を確保する日数）を調整する日数。 
受注データの販売管理期限シフトに反映される。 
例：2日多めに消費期限を確保する。入力：「2」。遠隔地など流通に時間が掛かる店舗。 
例：7日少なめに消費期限を確保する。入力：「-7」。直営店舗など流通時間の短い店舗。</inlineHelpText>
        <label>販売管理期限シフト</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HikiateNashiFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>出荷引当を行わない場合ON。 
受注データの引当無フラグへWFRで反映。</inlineHelpText>
        <label>引当無納品モード</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JishaCode__c</fullName>
        <description>相手から見た自社のコード</description>
        <inlineHelpText>外部連携出力時の　￥_外部連携_047取引先コード　に反映。</inlineHelpText>
        <label>自社コード</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JuchuSokuKakuteiFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>納品確認を行わず受注データを受注確定するフラグ。

受注確定の条件
・受注データの引当無納品モードがONの場合。
・受注データの引当成功完了がONの場合。

例：納品確認を必要としない取引先はON。
例：受注数量と納品（売上）数量が変化しない取引先はON。
例：納品を伴わない商品（サービスやライセンス）の販売先はON。</inlineHelpText>
        <label>受注即確定フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JuchusakiChofukuJogaiFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>受注明細データの登録時に登録済みの商品を確認するフラグ。

受注データ単位で重複確認する場合OFF。
取引先の受注データ全体で重複を確認する場合ON。</inlineHelpText>
        <label>受注先重複確認モード</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KahenSeikyuFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>売掛データ作成時に任意の請求締期間を設定する動作に固定する場合はON。
売掛データ作成時に可変請求フラグに毎回必ず反映される。</inlineHelpText>
        <label>可変請求フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KaishuGakuSokei__c</fullName>
        <inlineHelpText>請求集計データ	値引回収額　の合計金額</inlineHelpText>
        <label>回収額総計</label>
        <summarizedField>UrikakeData__c.KakuteiKaishuNebikiGaku__c</summarizedField>
        <summaryForeignKey>UrikakeData__c.SeikyuAccount__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Keisho__c</fullName>
        <defaultValue>&quot;御中&quot;</defaultValue>
        <label>敬称</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakuAriFlg__c</fullName>
        <description>契約有集計＞０</description>
        <formula>KeiyakuAriShukei__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>契約有集計＞０</inlineHelpText>
        <label>￥￥_契約有フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KeiyakuAriShukei__c</fullName>
        <label>￥￥_契約有集計</label>
        <summaryFilterItems>
            <field>AccountTankaM__c.GenzaiYukoFlgNamachi__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AccountTankaM__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KeiyakuBi__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>受注データの契約更新日に反映

5＝5日
25＝25日

0＝初日
1＝初日
空白＝初日</inlineHelpText>
        <label>契約日</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KeshikomiMikakuteiCounter__c</fullName>
        <inlineHelpText>消込未確定フラグ　がONの　入金充当リンク　の件数。</inlineHelpText>
        <label>￥￥_消込未確定カウンタ</label>
        <summarizedField>NyukinData__c.KeshikomiMikakuteiCounter__c</summarizedField>
        <summaryForeignKey>NyukinData__c.SeikyuAccount__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Kijitsu__c</fullName>
        <defaultValue>99</defaultValue>
        <inlineHelpText>売掛/買掛データの回収期日に反映

20＝20日
25＝25日
99＝末日</inlineHelpText>
        <label>期日</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KobetsuHikiateJikkoFlg__c</fullName>
        <formula>NOT( ISBLANK( KobetsuHikiateSaki__c ) )</formula>
        <label>￥￥_個別引当実行フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KobetsuHikiateSakiShokai__c</fullName>
        <formula>KobetsuHikiateSaki__r.Id</formula>
        <label>￥￥_個別引当先照会</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KobetsuHikiateSaki__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>標準の引当先以外から受注引当を行うばあい指定。
選択がない場合は標準引当先フラグONの倉庫（取引先マスタ）が割り当てられる。
通常は受注データの受注先から個別引当先が選択される。
受注データの納品先が設定される場合は納品先から個別引当先が選択される。</inlineHelpText>
        <label>個別引当先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>取引先 (優先引当先)</relationshipLabel>
        <relationshipName>YusenHikiateSakis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KozaShinseiJuryoFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>銀行口座での請求振替と支払振込を行得る状態の場合ON。

フラグOFFの場合は、売掛データは請求振込モードで動作する。

例）振替/振込申請書を先方から受け取った場合ON。
例）請求を振込で回収する取引先はOFF。
例）請求を振替で回収する取引先はON。
例）支払を振込で入金する取引先はON。</inlineHelpText>
        <label>口座申請受領フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KozaShiyoKanoFlg__c</fullName>
        <formula>AND(
 KozaYukokaYoteibi__c &lt;= TODAY() ,
  KozaShinseiJuryoFlg__c  ,
 LEN(Ginkobango__c)  = 4,
 LEN(Tembango__c)  = 3,
 LEN(Kozabango__c)  = 7
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>必要情報の記入済と口座有効化日の到来以降にON。

本フラグON時に、売掛データの振替請求フラグONとなる。

ON条件
・口座有効化予定日以降　かつ　口座有効化フラグON。
・銀行番号	4文字　かつ　店番号　3文字　かつ　口座番号　7文字　入力済。</inlineHelpText>
        <label>口座使用可能フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KozaYukokaYoteibi__c</fullName>
        <inlineHelpText>全ての手続が完了し振替/振込に口座が使用可能となる予定の日付。

例）口座振替による請求が可能となる日付。
例）口座振込によるキャッシュバックの支払が可能となる日付。</inlineHelpText>
        <label>口座有効化予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kozabango__c</fullName>
        <inlineHelpText>数字7桁
先頭ゼロ</inlineHelpText>
        <label>口座番号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LotKonzaiFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>受注の在庫引当処理で複数の在庫データ（パレット/ロット）を混在させる動きを標準とする場合チェックONにする。通常OFF。（ON例：直営店）</inlineHelpText>
        <label>ロット混在フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MeishoMaruchiKensaku__c</fullName>
        <formula>Name  + &quot; &quot; + 
SeishikiMeisho__c + &quot; &quot; + 
SeishikiMeisho__c + &quot; &quot; + 
Ryakusho__c + &quot; &quot; + 
TorihikisakiCode__c + &quot; &quot;</formula>
        <inlineHelpText>取引先名 正式名称 略称 取引先コード を元に検索するための文字列を出力。</inlineHelpText>
        <label>￥￥_名称マルチ検索</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MikakuteiJutoFlg__c</fullName>
        <formula>OR(
 KeshikomiMikakuteiCounter__c   &gt; 0,
 FumeiNyukinZengakuNamachi__c  &gt; 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>消込未確定フラグ　がONの　入金充当リンク　が存在する場合にON。
あるいは　不明入金残額計　が　￥１円以上の場合にON。</inlineHelpText>
        <label>充当未確定フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MinyukinZandakaSokei__c</fullName>
        <formula>SeikyuKingakuSokei__c  -  KaishuGakuSokei__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>請求金額総計－回収消込額総計</inlineHelpText>
        <label>未回収残高総計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MiseCode__c</fullName>
        <inlineHelpText>外部連携出力時の　￥_外部連携_032店コード　に反映。</inlineHelpText>
        <label>店コード</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NohinshoFooter__c</fullName>
        <defaultValue>&quot;項目デフォルト値　株式会社　XXX&quot;</defaultValue>
        <inlineHelpText>受注データ側で個別に納品先に選択した場合に「納品書」の左下の納品元の名称を上書きします。
個別に納品先を指定した場合でも通常は「デフォルト値」が表示されます。</inlineHelpText>
        <label>納品書フッタ</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NyukinSaidaiGaku__c</fullName>
        <inlineHelpText>各　不明入金データ　中の　残金額　の最大額</inlineHelpText>
        <label>入金最大額</label>
        <summarizedField>NyukinData__c.ZanKingaku__c</summarizedField>
        <summaryFilterItems>
            <field>NyukinData__c.KeshikomiJutoZumiFlg__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>NyukinData__c.SeikyuAccount__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NyukinSaishoGaku__c</fullName>
        <inlineHelpText>各　不明入金データ　中の　残金額　の最小額</inlineHelpText>
        <label>入金最小額</label>
        <summarizedField>NyukinData__c.ZanKingaku__c</summarizedField>
        <summaryFilterItems>
            <field>NyukinData__c.KeshikomiJutoZumiFlg__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>NyukinData__c.SeikyuAccount__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NyukinZengaku__c</fullName>
        <inlineHelpText>不明入金データ　残金額　の合計額</inlineHelpText>
        <label>入金済金額</label>
        <summarizedField>NyukinData__c.ZanKingaku__c</summarizedField>
        <summaryFilterItems>
            <field>NyukinData__c.KeshikomiJutoZumiFlg__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>NyukinData__c.SeikyuAccount__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OfurikomisakiGinko1__c</fullName>
        <defaultValue>&quot;デフォルト値　X銀行　Y支店　口座999&quot;</defaultValue>
        <label>お振込先銀行１</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfurikomisakiGinko2__c</fullName>
        <defaultValue>&quot;デフォルト値　X銀行　Y支店　口座999&quot;</defaultValue>
        <label>お振込先銀行２</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ryakusho__c</fullName>
        <label>略称</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SeikyuBikoJuchusakiFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>請求書の備考欄に受注先の名称（例：XXX店などの店舗名）を出力する場合にチェックONにする。</inlineHelpText>
        <label>請求書備考表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SeikyuKingakuSokei__c</fullName>
        <label>請求金額総計</label>
        <summarizedField>UrikakeData__c.SaishuSeikyuKingakuNamachi__c</summarizedField>
        <summaryForeignKey>UrikakeData__c.SeikyuAccount__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SeikyuTaishoFlg__c</fullName>
        <formula>MinyukinZandakaSokei__c &lt;&gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>未入金残高総計　が　￥０　の場合ON。
入金値引登録の対象となる。</inlineHelpText>
        <label>￥￥_請求対象フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SeikyuZumiKaishuGakuSokei__c</fullName>
        <inlineHelpText>請求確定した売掛データの未回収合計金額。</inlineHelpText>
        <label>請求済未回収額総計</label>
        <summarizedField>UrikakeData__c.KekuteiMiKaishuZandaka__c</summarizedField>
        <summaryFilterItems>
            <field>UrikakeData__c.SeikyuKakuteiFlg__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>UrikakeData__c.SeikyuAccount__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SeikyusakiShokaiNamachi__c</fullName>
        <label>￥￥_請求先照会生値</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeikyusakiShokai__c</fullName>
        <formula>IF ( ISBLANK( Seikyusaki__c ) , Id , Seikyusaki__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥￥_請求先照会</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeikyusakiTankaMHuyouFlg__c</fullName>
        <formula>Seikyusaki__r.AccountTankaMHuyouFlg__c</formula>
        <label>￥￥_請求先条件マスタ不要フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seikyusaki__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>受注先に対して請求するのではない場合に取引先マスタを選択する。

店舗から受注を受付る場合などに契約先（請求先）として使用する。</inlineHelpText>
        <label>請求先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>取引先（請求先）</relationshipLabel>
        <relationshipName>Account_Seikyusaki</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SeishikiMeisho__c</fullName>
        <label>正式名称</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShaTenCode__c</fullName>
        <inlineHelpText>外部連携出力時の　￥_外部連携_046社店コード　に反映。</inlineHelpText>
        <label>社店コード</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shimebi__c</fullName>
        <defaultValue>99</defaultValue>
        <inlineHelpText>売掛/買掛データの締め期間に反映

20＝20日
25＝25日
99＝末日</inlineHelpText>
        <label>締日</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShimekikanTsukisu__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>売掛/買掛データの締め期間月数に反映

1＝１ヶ月毎の締め期間 
2＝2ヶ月毎の締め期間</inlineHelpText>
        <label>締期間月数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shitemmei__c</fullName>
        <label>支店名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShokaisakiSaki__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>店舗の紹介者（社）。

例）取次パートナ。
例）キャッシュバック先。</inlineHelpText>
        <label>紹介パートナ</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>取引先 (紹介パートナ)</relationshipLabel>
        <relationshipName>ShokaisakiSakis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShomiKigenKonzaiFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>受注の在庫引当処理で複数の賞味期限を混在させる動きを標準とする場合チェックONにする。通常OFF。（ON例：直営店）</inlineHelpText>
        <label>消費期限混在フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shubetsu__c</fullName>
        <label>口座種別</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SokudenShubetsu__c</fullName>
        <inlineHelpText>伝票出力ソフトにフォーマット指示するための帳票識別番号</inlineHelpText>
        <label>伝票フォーマット</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuryoYusenFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>賞味期限の早く切れる在庫からではなく個数の少ない在庫データから優先して引き当てる動きを標準とする場合チェックON。通常OFF。（ON例：直営店）</inlineHelpText>
        <label>小口在庫優先フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SyohinIkkatuLink__c</fullName>
        <formula>HYPERLINK(&apos;/apex/J02_SyouhinIkkatsuTouroku?juchuId=null&amp;accountId=&apos; + Id, 
IMAGE( &quot;/resource/IkkatsuButton&quot; , &quot;明細一括登録&quot; ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>受注商品登録</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tembango__c</fullName>
        <inlineHelpText>数字3桁
先頭ゼロ</inlineHelpText>
        <label>店番号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TokusokuCounter__c</fullName>
        <inlineHelpText>督促アラート　が　ON　の　請求集計　の総数。</inlineHelpText>
        <label>督促カウンタ</label>
        <summaryFilterItems>
            <field>UrikakeData__c.TokusokuAlertNamachi__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>UrikakeData__c.SeikyuAccount__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TokusokuFlg__c</fullName>
        <formula>TokusokuCounter__c  &gt;= 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>督促カウンタ　≧　１　の場合ON</inlineHelpText>
        <label>督促フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TorihikiSiteNissu__c</fullName>
        <defaultValue>14</defaultValue>
        <inlineHelpText>都度請求の売掛データの期日に反映

締期間までに日数を加算し期日を算出する。
デフォルト14日。</inlineHelpText>
        <label>都度払債渡日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TorihikiSiteTsukisu__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>売掛/買掛データの入金期日に反映

0＝当月支払
1＝翌月支払
2＝翌々月支払</inlineHelpText>
        <label>取引債渡月数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TorihikisakiCode__c</fullName>
        <externalId>true</externalId>
        <label>取引先コード</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UrikakeYoshinLimit__c</fullName>
        <inlineHelpText>同時に売掛することができる最高金額。</inlineHelpText>
        <label>売掛与信限度額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UrikakeYoshinZan__c</fullName>
        <formula>IF (
OR(
 UrikakeYoshinLimit__c = 0,
 ISBLANK(UrikakeYoshinLimit__c) , 
 ISNULL(UrikakeYoshinLimit__c)
 ) ,
 NULL,
 UrikakeYoshinLimit__c  -  MinyukinZandakaSokei__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>売掛与信リミットから未入金残高総計を引いた値。
現時点で売掛可能な最高金額の意味。</inlineHelpText>
        <label>売掛与信残額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YusenHikiateSakiFlgHantei__c</fullName>
        <formula>AND(
 YusenHikiateSakiFlg__c ,
 NOT(KobetsuHikiateJikkoFlg__c ) 
)</formula>
        <label>￥￥_優先引当先フラグ判定</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YusenHikiateSakiFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>標準の受注引当を行う在庫先（引当先）の場合ON。
システム全体で１レコードのみON設定とする前提。
複数レコードに指定した場合はIDの若番のみが有効。</inlineHelpText>
        <label>優先引当先フラグ</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>SeishikiMeisho__c</columns>
        <columns>TorihikisakiCode__c</columns>
        <columns>AcconType__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべての取引先</label>
    </listViews>
    <listViews>
        <fullName>View20151024a</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>AccountTankaMHuyouFlg__c</columns>
        <columns>JuchuSokuKakuteiFlg__c</columns>
        <columns>HikiateNashiFlg__c</columns>
        <columns>JuchusakiChofukuJogaiFlg__c</columns>
        <columns>AcconType__c</columns>
        <columns>KobetsuHikiateSaki__c</columns>
        <columns>HambaiKanriKigenShift__c</columns>
        <columns>LotKonzaiFlg__c</columns>
        <columns>ShomiKigenKonzaiFlg__c</columns>
        <columns>SuryoYusenFlg__c</columns>
        <filterScope>Everything</filterScope>
        <label>．自動化フラグ設定（受注出荷）</label>
    </listViews>
    <listViews>
        <fullName>View20151024b</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>AcconType__c</columns>
        <columns>Seikyusaki__c</columns>
        <columns>ShimekikanTsukisu__c</columns>
        <columns>Shimebi__c</columns>
        <columns>TorihikiSiteTsukisu__c</columns>
        <columns>Kijitsu__c</columns>
        <columns>KahenSeikyuFlg__c</columns>
        <columns>SeikyuBikoJuchusakiFlg__c</columns>
        <columns>UrikakeYoshinLimit__c</columns>
        <columns>JuchuSokuKakuteiFlg__c</columns>
        <filterScope>Everything</filterScope>
        <label>．自動化フラグ設定（請求回収）</label>
    </listViews>
    <listViews>
        <fullName>View20160117a</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>AcconType__c</columns>
        <columns>Seikyusaki__c</columns>
        <columns>SyohinIkkatuLink__c</columns>
        <columns>KobetsuHikiateSaki__c</columns>
        <columns>AccountTankaMHuyouFlg__c</columns>
        <columns>JuchuSokuKakuteiFlg__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcconType__c</field>
            <operation>equals</operation>
            <value>受注先（店舗）,受注先（請求先）</value>
        </filters>
        <label>．受注登録</label>
    </listViews>
    <listViews>
        <fullName>View20160117b</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>AcconType__c</columns>
        <columns>ShimekikanTsukisu__c</columns>
        <columns>Shimebi__c</columns>
        <columns>TorihikiSiteTsukisu__c</columns>
        <columns>Kijitsu__c</columns>
        <columns>UrikakeYoshinLimit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcconType__c</field>
            <operation>equals</operation>
            <value>請求先,受注先（請求先）</value>
        </filters>
        <label>．分類_請求先</label>
    </listViews>
    <listViews>
        <fullName>View20160117c</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>SeishikiMeisho__c</columns>
        <columns>AcconType__c</columns>
        <columns>Seikyusaki__c</columns>
        <columns>AccountTankaMHuyouFlg__c</columns>
        <columns>JuchuSokuKakuteiFlg__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcconType__c</field>
            <operation>equals</operation>
            <value>受注先（店舗）,受注先（請求先）</value>
        </filters>
        <label>．分類_受注先</label>
    </listViews>
    <listViews>
        <fullName>View20160117d</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>AcconType__c</columns>
        <columns>TorihikisakiCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcconType__c</field>
            <operation>notContain</operation>
            <value>受注先（店舗）,請求先,受注先（請求先）</value>
        </filters>
        <label>．分類_その他</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AccountKijitsuRule</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Kijitsu__c &lt; 1,
  AND(Kijitsu__c &gt; 28, Kijitsu__c &lt;&gt; 99)
)</errorConditionFormula>
        <errorDisplayField>Kijitsu__c</errorDisplayField>
        <errorMessage>期日は1～28の値、または99（末日）で指定して下さい。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AccountShimebiRule</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Shimebi__c &lt; 1,
  AND(Shimebi__c &gt; 27, Shimebi__c &lt;&gt; 99)
)</errorConditionFormula>
        <errorDisplayField>Shimebi__c</errorDisplayField>
        <errorMessage>締日は1～27の値、または99（末日）で指定して下さい。</errorMessage>
    </validationRules>
</CustomObject>